<resources>
    <!--    MENU-->
    <string name="app_name">Strofllih</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

    <!--    LOGIN-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last lame</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>

    <string name="button_addPlacemark">Add Hillfort</string>
    <string name="hint_placemarkTitle">Hillfort title</string>
    <string name="hint_hillfortDescription">Description</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_deleteHillfort">Delete</string>
    <string name="enter_hillfort_title"> Please enter a Hillfort Title </string>
    <string name="save_hillfort"> Save Hillfort </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="change_hillfort_image">Change hilfort image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="account">Account</string>
    <string name="toast_delete">The hillfort is successfully deleted</string>
    <string name="visited">visited</string>
    <string name="additional_notes">Additional notes</string>
    <string name="fullname">%1$s %2$s</string>
    <string name="all_hillforts">All hillforts</string>
    <string name="title_activity_hillforts_maps">Map of all hillforts</string>
    <string name="hillfort_image_placeholder">Hillfort Imagee</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>
    <string name="hillfort_favourite">Hillfort Favourites</string>
</resources>
