<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.wit.hillforts.activities.HillfortsActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_placemarkTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/placemarkTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_hillfortDescription">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <CheckBox
                    android:id="@+id/checkbox_visited"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/visited" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentTop="true">

                    <TextView
                        android:id="@+id/text_view_date_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="12dp"
                        android:layout_marginRight="20dp"
                        android:textSize="17dp" />

                    <Button
                        android:id="@+id/button_date_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/text_view_date_1"
                        android:text="Change Date" />
                </RelativeLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/additional_notes">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/additionalNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"/>

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentTop="true">

                    <TextView
                        android:id="@+id/rating_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="Rating"
                        android:textSize="19dp" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="37dp"
                        android:layout_toEndOf="@+id/rating_text"
                        android:stepSize="0.5" />
                </RelativeLayout>

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/secondaryColor"
                    android:text="@string/button_addImage"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/hillfortImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:srcCompat="@mipmap/ic_launcher" />

<!--                <RelativeLayout-->
<!--                    android:id="@+id/extra_images"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentTop="true">-->

<!--                    <ImageView-->
<!--                        android:id="@+id/hillfortImage1"-->
<!--                        android:layout_width="110dp"-->
<!--                        android:layout_height="110dp"-->
<!--                        android:layout_marginLeft="8dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:padding="8dp"-->
<!--                        app:srcCompat="@mipmap/ic_launcher" />-->

<!--                    <ImageView-->
<!--                        android:id="@+id/hillfortImage2"-->
<!--                        android:layout_width="110dp"-->
<!--                        android:layout_height="110dp"-->
<!--                        android:layout_marginLeft="8dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_toRightOf="@id/hillfortImage1"-->
<!--                        android:padding="8dp"-->
<!--                        app:srcCompat="@mipmap/ic_launcher" />-->

<!--                    <ImageView-->
<!--                        android:id="@+id/hillfortImage3"-->
<!--                        android:layout_width="110dp"-->
<!--                        android:layout_height="110dp"-->
<!--                        android:layout_marginLeft="8dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_toRightOf="@id/hillfortImage2"-->
<!--                        android:padding="8dp"-->
<!--                        app:srcCompat="@mipmap/ic_launcher" />-->
<!--                </RelativeLayout>-->

<!--                <Button-->
<!--                    android:id="@+id/hillfortLocation"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="10dp"-->
<!--                    android:background="@color/secondaryColor"-->
<!--                    android:stateListAnimator="@null"-->
<!--                    android:text="@string/button_location"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="16sp" />-->

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapViewLocation"
                    android:layout_width="match_parent"
                    android:layout_height="202dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lng"
                        android:layout_width="127dp"
                        android:layout_height="19dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="16dp"
                        android:text="Lng: 00.000000"
                        app:layout_constraintStart_toEndOf="@+id/lat"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/lat"
                        android:layout_width="146dp"
                        android:layout_height="19dp"
                        android:layout_marginStart="17dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="228dp"
                        android:text="Lat: 00.000000"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--                <Button-->
                <!--                    android:id="@+id/btnAdd"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_margin="16dp"-->
                <!--                    android:background="@color/rifle_green"-->
                <!--                    android:paddingTop="8dp"-->
                <!--                    android:paddingBottom="8dp"-->
                <!--                    android:stateListAnimator="@null"-->
                <!--                    android:text="@string/button_addPlacemark"-->
                <!--                    android:textColor="@color/white"-->
                <!--                    android:textSize="16sp" />-->


            </LinearLayout>

        </ScrollView>


    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check" />
</androidx.constraintlayout.widget.ConstraintLayout>